--- a/css/styles.css
+++ b/css/styles.css
@@ -44,3 +44,17 @@
     border-bottom: 1px solid #ddd;
     padding: 10px;
 }
+
+.carousel{
+    background: #512da8;
+}
+.carousel-item{
+    height: 220px;
+}
+
+.carousel-item img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 220px;
+}
