--- a/css/styles.css
+++ b/css/styles.css
@@ -58,3 +58,10 @@
     left: 0;
     min-height: 220px;
 }
+
+#carouselButton {
+    right:0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
